Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6407257.out
T6407257.java:9:1: compiler.err.cyclic.inheritance: T6407257a
1 error
